Overlap fixes header 3

--- a/src/scss/component/_header.scss
+++ b/src/scss/component/_header.scss
@@ -1075,7 +1075,7 @@ header {
         right: 0;
         position: fixed;
         opacity: 0;
-        z-index: 30;
+        z-index: 50;
         -webkit-transform: translateY(-120%);
         -khtml-transform: translateY(-120%);
         -moz-transform: translateY(-120%);
